syntax = "proto2";

package org.inlighting.proto;

option java_package = "org.inlighting.proto";
option java_outer_classname = "TrailerProtos";

message Trailer {
  required uint64 kvLength = 1;
  required uint64 bloomFilterLength = 2;
  required uint32 trailerLength = 3;
}